can bootstrap using avro file