@@ -4,6 +4,8 @@ import com.codahale.metrics.annotation.Timed;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.linkedin.thirdeye.api.StarTreeConfig;
 import com.linkedin.thirdeye.api.StarTreeManager;
+import com.linkedin.thirdeye.api.StarTreeRecord;
+import com.linkedin.thirdeye.impl.StarTreeRecordStreamAvroFileImpl;
 import com.linkedin.thirdeye.impl.StarTreeRecordStreamTextStreamImpl;
 import org.hibernate.validator.constraints.NotEmpty;
 
@@ -12,8 +14,8 @@ import javax.ws.rs.Path;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
-import java.io.InputStream;
-import java.net.URL;
+import java.io.File;
+import java.net.URI;
 
 @Path("/bootstrap")
 @Produces(MediaType.APPLICATION_JSON)
@@ -36,10 +38,29 @@ public class ThirdEyeBootstrapResource
       throw new IllegalArgumentException("No collection " + payload.getCollection());
     }
 
-    InputStream inputStream = new URL(payload.getUri()).openStream();
+    URI uri = URI.create(payload.getUri());
 
-    StarTreeRecordStreamTextStreamImpl recordStream
-            = new StarTreeRecordStreamTextStreamImpl(inputStream, config.getDimensionNames(), config.getMetricNames(), "\t");
+    Iterable<StarTreeRecord> recordStream;
+    if ("file".equals(uri.getScheme()))
+    {
+      recordStream = new StarTreeRecordStreamTextStreamImpl(
+              uri.toURL().openStream(),
+              config.getDimensionNames(),
+              config.getMetricNames(),
+              "\t"); // Assume TSV
+    }
+    else if ("avro".equals(uri.getScheme()))
+    {
+      recordStream = new StarTreeRecordStreamAvroFileImpl(
+              new File(uri.getPath()),
+              config.getDimensionNames(),
+              config.getMetricNames(),
+              config.getTimeColumnName());
+    }
+    else
+    {
+      throw new IllegalArgumentException("Invalid payload URI " + uri);
+    }
 
     starTreeManager.load(payload.getCollection(), recordStream);
 
